2005-06-23  Erik Hjortsberg   <erik@katastrof.nu>


	* src/components/ogre/widgets/InspectWidget.*
		* oops, don't try to get the view until it's created

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntityUserObject.*, AvatarCamera.cpp
	* src/components/ogre/jesus/JesusPickerObject.*
		* added a getTypeName() method to the UserObjects 
		* use the getTypeName() method in the picking methods

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/modeldefinitions/iteam.modeldef.xml
		* rotate the mausoleum a bit

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/widgets/InspectWidget.*
		* when the inspected entity is deleted, remove the reference to it

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberOgre.*
		* added accessor for the main View and made some accessors const

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* make it right this time

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* don't forget to set the material lod index

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Avatar.cpp
		* set the walk speed to 5 again
	* src/components/ogre/model/XMLModelDefinitionSerializer.cpp
		* upon error, log an error and continue
	* src/components/ogre/modeldefinitions/*
		* added a lot of new entities, amongst them the mausoleum, the skeleton (and lych), the broken tower, the house and the gallows	 

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* /src/components/ogre/environment/Sky.cpp
		* get the setting for fog max distance from the config file

2005-06-22  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberSceneManager/src/OgreTerrainRenderable.cpp
		* if a piece of terrain is fully in the fog, apply the lowest LOD to it, since it's not actually seen anyway
